# progra2

./: .gitignore  CMakeLists.txt  a  b
semana 12/: a.cpp
semana 13/: a.cpp
semana 15/: a.cpp  b.cpp  c.cpp
semana10/: a.cpp  b.cpp  clase_1.cpp
semana11/: a.cpp  b.cpp  clase_1.cpp  clase_2.cpp
semana12/: b.cpp  clase_1.cpp  clase_2.cpp
semana13/: clase_1.cpp
semana14/: a.cpp  b.cpp  c.cpp  clase_1.cpp  clase_2.cpp  clase_3.cpp
semana15/: clase_1.cpp  clase_2.cpp  clase_3.cpp
