cmake_minimum_required(VERSION 3.31)
project(progra2)

set(CMAKE_CXX_STANDARD 20)

# Semana 10
add_executable(semana10_clase_1 semana10/clase_1.cpp)

# Semana 11
add_executable(semana11_clase_1 semana11/clase_1.cpp)
add_executable(semana11_clase_2 semana11/clase_2.cpp)

# Semana 12
add_executable(semana12_clase_1 semana12/clase_1.cpp)
add_executable(semana12_clase_2 semana12/clase_2.cpp)

# Semana 13
add_executable(semana13_clase_1 semana13/clase_1.cpp)

# Semana 14
add_executable(semana14_clase_1 semana14/clase_1.cpp)
add_executable(semana14_clase_2 semana14/clase_2.cpp)
add_executable(semana14_clase_3 semana14/clase_3.cpp)

# Semana 15
add_executable(semana15_clase_1 semana15/clase_1.cpp)
add_executable(semana15_clase_2 semana15/clase_2.cpp)
add_executable(semana15_clase_3 semana15/clase_3.cpp)
